--- a/RestaurantRater/Views/Home/Index.cshtml
+++ b/RestaurantRater/Views/Home/Index.cshtml
@@ -3,29 +3,29 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Restaurant Rater</h1>
+    <p class="lead">Restaurant Rater is a simple web app powered by ASP.NET Web MVC that allows users to come in and record different restaurants and rate them.</p>
+    <p>
+        @Html.ActionLink("Learn More", "About", null, new { @class = "btn btn-primary btn-lg"})
+    </p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Getting Started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+           Click on the navbar button link to Rate a Restaurant or click below on the button that says Rate a Restaurant.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Restaurant/Index">Rate A Restaurant &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Get More Information</h2>
+        <p>Click here to learn more about Restaurant Rater</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2>Get In Touch</h2>
+        <p>Click here to contact the owners of Restaurant Rater with your comments/concerns</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
